--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.4.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.14",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.3",
+    "@types/swagger-ui-express": "^4.1.6",
     "prisma": "^5.4.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
@@ -26,8 +32,5 @@
     "start": "node ./dist/server.js",
     "postinstall": "prisma generate",
     "prisma:deploy": "prisma migrate deploy"
-  },
-  "engines": {
-    "node": "18"
   }
 }
