--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "swagger-ui-express": "^5.0.0"
   },
@@ -19,10 +21,12 @@
     "@types/cors": "^2.8.14",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.3",
     "@types/swagger-ui-express": "^4.1.6",
     "prisma": "^5.4.1",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
@@ -31,6 +35,12 @@
     "build": "yarn && tsc && yarn prisma:deploy",
     "start": "node ./dist/server.js",
     "postinstall": "prisma generate",
-    "prisma:deploy": "prisma migrate deploy"
+    "prisma:deploy": "prisma migrate deploy",
+    "test": "jest --noStackTrace --runInBand --verbose",
+    "test:unit": "jest -c jest.unit.config.ts --noStackTrace --verbose",
+    "test:verbose": "jest --verbose --runInBand --detectOpenHandles",
+    "test:coverage": "jest --runInBand --coverage",
+    "test:watch": "jest --silent --noStackTrace --runInBand --watchAll",
+    "test:int": "jest -c jest.int.config.ts --noStackTrace --verbose"
   }
 }
