--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "supertest": "^6.3.4",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.3",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "prisma": "^5.4.1",
     "ts-jest": "^29.1.1",
